[package]
name = "public-user-http-s3-media-loader"
version = "0.1.0"
edition = "2021"

[dependencies]
rust-s3 = "0.35"
axum = "0.8"
hyper = "1.5"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
tokio = {version = "1", features = ["full"]}
aws-config = "1"
futures-core = "0.3"
lazy_static = "1.5"
once_cell = "1.20"
dashmap = "6.1"
crossbeam = "0.8"